<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/pizza_right"
            android:layout_width="@dimen/pizza_size"
            android:layout_height="@dimen/pizza_size"
            android:layout_alignParentEnd="true"
            android:background="@drawable/pizza_right" />

        <ImageView
            android:id="@+id/pizza_left"
            android:layout_width="@dimen/pizza_size"
            android:layout_height="@dimen/pizza_size"
            android:layout_alignParentStart="true"
            android:layout_marginTop="100dp"
            android:background="@drawable/pizza_left" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="5dp"
            app:cardElevation="1dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/title_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardView"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/title_1"
            android:textColor="@color/colorTitle"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_1"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/title_2"
            android:textColor="@color/colorSubtitle"
            android:textSize="14dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:layout_below="@+id/title_2"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="15dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/view_menu"
                    android:textColor="@color/colorRed"
                    android:textSize="15dp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>