<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/item_click_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/item_card_parent"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            app:cardBackgroundColor="@color/colorBackground"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:id="@+id/item_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/item_icon"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/delivery" />

                <TextView
                    android:id="@+id/item_parent_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/item_icon"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/delivery"
                    android:textColor="@color/colorTitle"
                    android:textSize="17dp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:id="@+id/item_info_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_card_parent"
            android:visibility="gone">

            <androidx.cardview.widget.CardView
                android:id="@+id/item_order_info_parent"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                app:cardBackgroundColor="@color/colorBackground"
                app:cardCornerRadius="0dp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:id="@+id/item_order_info_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="5dp"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="@string/delivery_order_info_title"
                        android:textColor="@color/colorTitle"
                        android:textSize="15dp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/item_order_location_parent"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/item_order_info_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="0dp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:id="@+id/item_order_location_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/ic_location" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="@string/delivery_order_location_title"
                        android:textColor="@color/colorTitle"
                        android:textSize="15dp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/item_order_button_parent"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/item_order_location_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                app:cardBackgroundColor="@color/colorOrderButton"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:id="@+id/item_order_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="@string/delivery_order_button_title"
                        android:textColor="@color/colorWhite"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>